--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,16 @@ img {
   padding: 24px 0;
 }
 
+.studio::after {
+  width: 48px;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
+  content: "";
+  display: block;
+  position: absolute;
+}
+
 .link {
   font-family: Roboto;
   color: #2e2f42;
@@ -141,10 +151,18 @@ img {
   height: 600px;
   display: flex;
   padding: 188px 0;
+
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/effective-solutions/people-office.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 1440px;
+  background-clip: padding-box;
 }
 
-.section-one-container {
-}
 .solutions-title {
   color: #fff;
   text-align: center;
