--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,11 @@ img {
   padding: 24px 0;
 }
 
+.current {
+  position: relative;
+  color: #404bbf;
+}
+
 .studio::after {
   width: 48px;
   height: 4px;
@@ -98,6 +103,7 @@ img {
   content: "";
   display: block;
   position: absolute;
+  margin-top: 20px;
 }
 
 .link {
@@ -151,6 +157,7 @@ img {
   height: 600px;
   display: flex;
   padding: 188px 0;
+  margin-top: 0;
 
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
@@ -227,6 +234,20 @@ img {
   overflow: hidden;
 }
 
+.direction-pictures {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+  background-color: #f4f4fd;
+  border-radius: 4px;
+  margin-bottom: 8px;
+  border: 1px solid #8e8f99;
+  width: 264px;
+  fill: #2e2f42;
+  padding: 24px 100px;
+}
+
 .directions-items {
   display: flex;
   gap: 24px;
@@ -265,8 +286,6 @@ img {
 
 .our-team {
   background: #f4f4fd;
-  height: 732px;
-  flex-shrink: 0;
 }
 
 .team-card {
@@ -324,6 +343,30 @@ img {
   line-height: 24px;
   letter-spacing: 0.32px;
   text-align: center;
+  margin-bottom: 8px;
+}
+
+.social-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
+}
+
+.social-links {
+  width: 40px;
+  height: 40px;
+}
+
+.social-links-items {
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  fill: #f4f4fd;
 }
 
 /*main-section-fourth*/
