--- a/css/styles.css
+++ b/css/styles.css
@@ -86,24 +86,23 @@ img {
   gap: 40px;
 }
 
-.studio {
+.list-link .studio {
   padding: 24px 0;
-}
-
-.current {
   position: relative;
   color: #404bbf;
 }
 
 .studio::after {
+  content: "";
+  position: absolute;
   width: 48px;
   height: 4px;
   background-color: #404bbf;
   border-radius: 2px;
-  content: "";
   display: block;
-  position: absolute;
-  margin-top: 20px;
+  left: 0;
+  bottom: -3px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link {
@@ -367,6 +366,15 @@ img {
   height: 100%;
   display: flex;
   fill: #f4f4fd;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-links-items:hover {
+  background-color: #404bbf;
+}
+
+.social-links-items:focus {
+  background-color: #404bbf;
 }
 
 /*main-section-fourth*/
@@ -398,8 +406,16 @@ img {
 
 .project-card {
   width: calc((100% - 48px) / 3);
+  padding-bottom: 0;
+  flex-shrink: 0;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.project-card:hover {
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
 .card-information {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
@@ -427,12 +443,39 @@ img {
   letter-spacing: 0.02em;
 }
 
+.img-portfolio {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #4d5ae5;
+  width: 100%;
+  height: 100%;
+  color: #f4f4fd;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  padding: 40px 32px;
+  overflow: auto;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.img-portfolio:hover .overlay {
+  transform: translateY(0%);
+}
+
 /*footer*/
 
 .footer-conteiner {
   background: #2e2f42;
   height: 312px;
   padding: 100px 0;
+  display: flex;
 }
 
 .footer-box {
@@ -475,4 +518,12 @@ img {
   letter-spacing: 0.32px;
 
   width: 264px;
+}
+
+.social-media-p {
+  color: #fff;
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1.5rem;
+  letter-spacing: 0.02rem;
 }
