--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,8 @@ img {
 /*header*/
 .header-content {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 /*navigation*/
@@ -92,6 +94,7 @@ img {
   padding: 24px 0;
   position: relative;
   color: #404bbf;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .studio::after {
@@ -103,8 +106,7 @@ img {
   border-radius: 2px;
   display: block;
   left: 0;
-  bottom: -3px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  bottom: -1px;
 }
 
 .link {
@@ -139,6 +141,7 @@ img {
   line-height: 24px;
   letter-spacing: 0.32px;
   color: #434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacts-item {
   display: flex;
@@ -160,7 +163,7 @@ img {
   display: flex;
   padding: 188px 0;
   margin-top: 0;
-
+  background-size: cover;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
@@ -201,7 +204,7 @@ img {
   margin-top: 48px;
   margin-left: auto;
   margin-right: auto;
-
+  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   /*button text*/
 
   color: #fff;
@@ -483,6 +486,7 @@ img {
 
 .footer-box {
   display: flex;
+  align-items: baseline;
 }
 
 .footer-webstudio {
@@ -534,9 +538,17 @@ img {
   font-weight: 500;
   line-height: 1.5rem;
   letter-spacing: 0.02rem;
-  padding-bottom: 16px;
+  margin-bottom: 16px;
 }
 
 .social-media-list .social-container {
   gap: 16px;
+}
+
+.footer-social-links:hover {
+  background-color: #31d0aa;
+}
+
+.footer-social-links:focus {
+  background-color: #31d0aa;
 }
